# course_work_parallel_computing

./: .clang-format  .gitignore  CMakeLists.txt
clients/cpp/: CMakeLists.txt
clients/cpp/src/: main.cpp
server/: CMakeLists.txt  pch.h
server/src/: Assert.h  FileSystem.cpp  FileSystem.h  InvertedIndex.cpp  InvertedIndex.h  Log.cpp  Log.h  RandomGenerator.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h  main.cpp
tests/: locustfile.py
